# genai-agentos-hackathon-2025

./: docker-compose.yml
a2a-server/: .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README-A2A.md  README-PROJECT-STRUCTURE.md  docker-compose.yml  main.py  pyproject.toml  remove-image.sh  run_tests.py  start.sh
a2a-server/src/a2a_text_analysis_agent/: __init__.py  main.py
a2a-server/src/a2a_text_analysis_agent/agents/: text_analysis_agent.py
a2a-server/src/a2a_text_analysis_agent/protocol/: a2a_types.py
a2a-server/src/a2a_text_analysis_agent/schemas/: a2a_schemas.py
a2a-server/src/a2a_text_analysis_agent/services/: a2a_server.py
a2a-server/src/a2a_text_analysis_agent/tools/: __init__.py  entity_extractor.py  grammar_checker.py  paraphraser.py  sentiment_analyzer.py  statistics_analyzer.py  summarizer.py
a2a-server/tests/integration/: test_a2a_integration.py
a2a-server/tests/unit/: test_text_analysis_agent.py
cli/: pyproject.toml
cli/agents/current_date/: currentdate.py  pyproject.toml
mcp_servers/google_drive/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  remove_gdrive_image.sh  server.py
mcp_servers/google_sheets/: .env.example  Dockerfile  server.py
mcp_servers/notion/: Dockerfile  docker-compose.yml
